refactor(basic-3.3): make names shorter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class="matrix-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="wrapper">
-      <p id="add-element-header">
+      <p id="add-elem-header">
         <label for="new-task">Add Item</label>
         <div class="input-new-task-wrapper">
           <input id="new-task"class="task" type="text">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incompl-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -40,7 +40,7 @@
         </li>
         </ul>
         <h3>Completed</h3>
-        <ul id="completed-tasks">
+        <ul id="compl-tasks">
           <li>
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
