refactor(extended-1.1): change some tags

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <a class="matrix-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="wrapper">
-      <p id="add-elem-header">
+      <div id="add-elem-header">
         <label for="new-task">Add Item</label>
         <div class="input-new-task-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
+      </div>
       <h3>Todo</h3>
       <ul id="incompl-tasks">
         <li>
